--- a/hw6.html
+++ b/hw6.html
@@ -128,8 +128,8 @@
         </div>
         <div id="hw6part2" class="part card-body" style="display: none;">
           <p>
-            Create a function that searchs a string for a character and displays
-            the number of occurances of that character. Ignore case.
+            Create a function that searches a string for a character and
+            displays the number of occurrences of that character. Ignore case.
           </p>
           <hr />
           <form onsubmit="return hw6part2submit()">
