--- a/hw6.html
+++ b/hw6.html
@@ -105,6 +105,14 @@
         <div id="hw6part1" class="part card-body" style="display: none;">
           <form onsubmit="return hw6part1submit()">
             <p>Please enter a number with at least 4 decimal positions.</p>
+            <p>Click submit to see</p>
+            <ul>
+              <li>nearest integer</li>
+              <li>nearest integer to the square root</li>
+              <li>rounded to the tenths</li>
+              <li>rounded to the hundredths</li>
+              <li>rounded to the thousandths</li>
+            </ul>
             <div class="form-group">
               <label for="hw6part1input">Number</label>
               <input
