--- a/hw7.html
+++ b/hw7.html
@@ -1,61 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="CNIT 133 Homework 7">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="CNIT 133 Homework 7" />
     <title>CNIT 133 HW7</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand text-info" href="index.html">CNIT133</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Homeworks
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="hw2.html">Homework 2</a>
-                        <a class="dropdown-item" href="hw3.html">Homework 3</a>
-                        <a class="dropdown-item" href="hw4.html">Homework 4</a>
-                        <a class="dropdown-item" href="hw5.html">Homework 5</a>
-                        <a class="dropdown-item" href="hw6.html">Homework 6</a>
-                        <a class="dropdown-item" href="hw7.html">Homework 7</a>
-                        <a class="dropdown-item" href="hw8.html">Homework 8</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
+      <a class="navbar-brand text-info" href="index.html">CNIT133</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdownMenuLink"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Homeworks
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="hw2.html">Homework 2</a>
+              <a class="dropdown-item" href="hw3.html">Homework 3</a>
+              <a class="dropdown-item" href="hw4.html">Homework 4</a>
+              <a class="dropdown-item" href="hw5.html">Homework 5</a>
+              <a class="dropdown-item" href="hw6.html">Homework 6</a>
+              <a class="dropdown-item" href="hw7.html">Homework 7</a>
+              <a class="dropdown-item" href="hw8.html">Homework 8</a>
+            </div>
+          </li>
+        </ul>
+      </div>
     </nav>
     <div class="container">
-        Coming soon...
+      <div class="card">
+        <div class="card-header">
+          <ul class="nav nav-tabs card-header-tabs">
+            <li class="nav-item">
+              <a
+                href="javascript:"
+                class="nav-link active hw7-nav"
+                onclick="changePart('hw7');active(this, 'hw7-nav');"
+                >Homework 7</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link hw7-nav"
+                href="javascript:"
+                onclick="changePart('hw7part1');active(this, 'hw7-nav');"
+                >Part 1</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link hw7-nav"
+                href="javascript:"
+                onclick="changePart('hw7part2');active(this, 'hw7-nav');"
+                >Part 2</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div id="hw7" class="part card-body">
+          CNIT 133 Homework 7 - Object Model and Event Model
+        </div>
+        <div id="hw7part1" class="part card-body" style="display: none;">
+          <form>
+            <div class="form-group">
+              <p>Select a background color.</p>
+              <div class="form-check form-check-inline">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="radioBackground"
+                  id="inlineRadio1"
+                  value="backgroundRed"
+                />
+                <label class="form-check-label" for="inlineRadio1">Red</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="radioBackground"
+                  id="inlineRadio2"
+                  value="backgroundWhite"
+                />
+                <label class="form-check-label" for="inlineRadio2">White</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="radioBackground"
+                  id="inlineRadio3"
+                  value="backgroundBlue"
+                />
+                <label class="form-check-label" for="inlineRadio3">Blue</label>
+              </div>
+            </div>
+            <div class="form-group">
+              <p>Choose a font style</p>
+              <select class="custom-select my-1 mr-sm-2" id="fontFamily">
+                <option selected>Choose...</option>
+                <option value="serif">Times New Roman</option>
+                <option value="sansserif">Arial</option>
+                <option value="monospace">Lucida Console</option>
+              </select>
+            </div>
+            <div class="form-group" id="hw7checkbox">
+              <p>Select any other styles</p>
+              <div class="form-check form-check-inline">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  id="inlineCheckbox1"
+                  value="bold"
+                />
+                <label class="form-check-label" for="inlineCheckbox1"
+                  >Bold</label
+                >
+              </div>
+              <div class="form-check form-check-inline">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  id="inlineCheckbox2"
+                  value="italic"
+                />
+                <label class="form-check-label" for="inlineCheckbox2"
+                  >Italic</label
+                >
+              </div>
+            </div>
+          </form>
+        </div>
+        <div id="hw7part2" class="part card-body" style="display: none;"></div>
+      </div>
     </div>
 
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-    </script>
-</body>
-
+    <script
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
+    <script src="https://use.fontawesome.com/18b1df2d3f.js"></script>
+    <script src="scripts.js"></script>
+  </body>
 </html>
