--- a/hw4.html
+++ b/hw4.html
@@ -85,6 +85,7 @@
             </li>
             <li class="nav-item">
               <a
+                id="hw4part1nav"
                 class="nav-link hw4-nav"
                 href="javascript:"
                 onclick="changePart('hw4part1');active(this, 'hw4-nav');"
@@ -93,6 +94,7 @@
             </li>
             <li class="nav-item">
               <a
+                id="hw4part2nav"
                 class="nav-link hw4-nav"
                 href="javascript:"
                 onclick="changePart('hw4part2');active(this, 'hw4-nav');"
@@ -101,6 +103,7 @@
             </li>
             <li class="nav-item">
               <a
+                id="hw4ecnav"
                 class="nav-link hw4-nav"
                 href="javascript:"
                 onclick="changePart('hw4ec');active(this, 'hw4-nav');"
@@ -112,7 +115,7 @@
         <div id="hw4" class="part card-body">
           Bryan Liang CNIT133 Homework 4 Loops
         </div>
-        <div id="hw4part1" class="part card-body" style="display:none">
+        <div id="hw4part1" class="part card-body" style="display: none;">
           <p>
             Part 1a: Create a webpage that contains a script, using the for
             statement, that calculates the product and sum of every fourth
@@ -143,7 +146,7 @@
             <p>Drag me around!</p>
           </div>
         </div>
-        <div id="hw4part2" class="part card-body" style="display:none">
+        <div id="hw4part2" class="part card-body" style="display: none;">
           <p>
             Create a webpage that contains a script that will calculate compound
             interest on a principal of $1000 for interest rates of 5, 6, and 7%,
@@ -162,7 +165,7 @@
           <hr />
           <div id="tableContainer"></div>
         </div>
-        <div id="hw4ec" class="part card-body" style="display:none">
+        <div id="hw4ec" class="part card-body" style="display: none;">
           <p>
             Create a webpage that contains a script that reads in the size of
             the side of a square and displays a hollow square of that size
@@ -183,7 +186,7 @@
               max="10"
             />
             <br />
-            <input type="submit" style="display:none" />
+            <input type="submit" style="display: none;" />
             <input type="submit" value="Generate Square" />
           </form>
           <br />
