--- a/hw5.html
+++ b/hw5.html
@@ -85,6 +85,7 @@
             </li>
             <li class="nav-item">
               <a
+                id="hw5part1nav"
                 class="nav-link hw5-nav"
                 href="javascript:"
                 onclick="changePart('hw5part1');active(this, 'hw5-nav');"
@@ -93,6 +94,7 @@
             </li>
             <li class="nav-item">
               <a
+                id="hw5part2nav"
                 class="nav-link hw5-nav"
                 href="javascript:"
                 onclick="changePart('hw5part2');active(this, 'hw5-nav');"
@@ -101,6 +103,7 @@
             </li>
             <li class="nav-item">
               <a
+                id="hw5part3nav"
                 class="nav-link hw5-nav"
                 href="javascript:"
                 onclick="changePart('hw5part3');active(this, 'hw5-nav');"
@@ -110,7 +113,7 @@
           </ul>
         </div>
         <div id="hw5" class="part card-body">CNIT 133 Homework 5 - Arrays</div>
-        <div id="hw5part1" class="part card-body" style="display:none">
+        <div id="hw5part1" class="part card-body" style="display: none;">
           <p>
             Create a webpage containing a form that displays an input text box,
             radio buttons, checkboxes, and select items; along with a script
@@ -128,7 +131,7 @@
             <input type="text" id="hw5part1text" name="hw5part1text" />
             <span id="hw5part1texterror"></span>
             <br />
-            <p style="padding-top: 1rem">What is your age?</p>
+            <p style="padding-top: 1rem;">What is your age?</p>
             <input
               type="radio"
               id="hw5part1radio1"
@@ -154,7 +157,7 @@
             <label for="hw5part1radio3">65+</label>
             <span id="hw5part1radioerror"></span>
             <br />
-            <p style="padding-top: 1rem ">Select at least one</p>
+            <p style="padding-top: 1rem;">Select at least one</p>
             <input
               type="checkbox"
               id="hw5part1cb1"
@@ -225,7 +228,7 @@
             </div>
           </div>
         </div>
-        <div id="hw5part2" class="part card-body" style="display:none">
+        <div id="hw5part2" class="part card-body" style="display: none;">
           <p>
             Create a 2nd webpage that contains a script that utilizes 2 pulldown
             menus. The first one should utilize an onchange event handler. The
@@ -253,7 +256,7 @@
             Go to site
           </button>
         </div>
-        <div id="hw5part3" class="part card-body" style="display:none">
+        <div id="hw5part3" class="part card-body" style="display: none;">
           <p>
             Create a webpage that enables the user to enter a state name (full
             or just the two characters that represent the state) and have the
