--- a/hw6.html
+++ b/hw6.html
@@ -77,6 +77,7 @@
             </li>
             <li class="nav-item">
               <a
+                id="hw6part1nav"
                 class="nav-link hw6-nav"
                 href="javascript:"
                 onclick="changePart('hw6part1');active(this, 'hw6-nav');"
@@ -85,6 +86,7 @@
             </li>
             <li class="nav-item">
               <a
+                id="hw6part2nav"
                 class="nav-link hw6-nav"
                 href="javascript:"
                 onclick="changePart('hw6part2');active(this, 'hw6-nav');"
@@ -93,6 +95,7 @@
             </li>
             <li class="nav-item">
               <a
+                id="hw6part3nav"
                 class="nav-link hw6-nav"
                 href="javascript:"
                 onclick="changePart('hw6part3');active(this, 'hw6-nav');"
