--- a/hw7.html
+++ b/hw7.html
@@ -167,7 +167,207 @@
             </div>
           </form>
         </div>
-        <div id="hw7part2" class="part card-body" style="display: none;"></div>
+        <div id="hw7part2" class="part card-body" style="display: none;">
+          <div id="homework2" class="btn-group">
+            <div class="dropdown">
+              <button
+                class="btn btn-primary dropdown-toggle"
+                type="button"
+                id="hw2dropdown"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Homework 2
+              </button>
+              <div class="dropdown-menu" aria-labelledby="hw2dropdown">
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw2.html#hw2.part1"
+                  >Part 1</a
+                >
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw2.html#hw2.part2"
+                  >Part 2</a
+                >
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw2.html#hw2.part3"
+                  >Part 3</a
+                >
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw2.html#hw2.extra-credit"
+                  >Extra Credit</a
+                >
+              </div>
+            </div>
+          </div>
+          <div id="homework3" class="btn-group">
+            <div class="dropdown">
+              <button
+                class="btn btn-secondary dropdown-toggle"
+                type="button"
+                id="hw3dropdown"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Homework 3
+              </button>
+              <div class="dropdown-menu" aria-labelledby="hw3dropdown">
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw3.html#hw3.part1"
+                  >Part 1</a
+                >
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw3.html#hw3.part2"
+                  >Part 2</a
+                >
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw3.html#hw3.part3"
+                  >Part 3</a
+                >
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw3.html#hw3.part4"
+                  >Part 4</a
+                >
+              </div>
+            </div>
+          </div>
+          <div id="homework4" class="btn-group">
+            <div class="dropdown">
+              <button
+                class="btn btn-success dropdown-toggle"
+                type="button"
+                id="hw4dropdown"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Homework 4
+              </button>
+              <div class="dropdown-menu" aria-labelledby="hw4dropdown">
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw4.html#hw4.part1"
+                  >Action</a
+                >
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw4.html#hw4.part2"
+                  >Part 2</a
+                >
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw4.html#hw4.ec"
+                  >Extra Credit</a
+                >
+              </div>
+            </div>
+          </div>
+          <div id="homework5" class="btn-group">
+            <div class="dropdown">
+              <button
+                class="btn btn-info dropdown-toggle"
+                type="button"
+                id="hw5dropdown"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Homework 5
+              </button>
+              <div class="dropdown-menu" aria-labelledby="hw5dropdown">
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw5.html#hw5.part1"
+                  >Part 1</a
+                >
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw5.html#hw5.part2"
+                  >Part 2</a
+                >
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw5.html#hw5.part3"
+                  >Part 3</a
+                >
+              </div>
+            </div>
+          </div>
+          <div id="homework6" class="btn-group">
+            <div class="dropdown">
+              <button
+                class="btn btn-warning dropdown-toggle"
+                type="button"
+                id="hw6dropdown"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Homework 6
+              </button>
+              <div class="dropdown-menu" aria-labelledby="hw6dropdown">
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw6.html#hw6.part1"
+                  >Part 1</a
+                >
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw6.html#hw6.part2"
+                  >Part 2</a
+                >
+                <a
+                  class="dropdown-item"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="hw6.html#hw6.part3"
+                  >Part 3</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
