--- a/hw8.html
+++ b/hw8.html
@@ -114,6 +114,10 @@
           </p>
           <p>Only the HTTP GET method is available.</p>
           <p>You do not need a key to access the information.</p>
+          <p>
+            The route I am hitting is https://pokeapi.co/api/v2/pokemon/{name or
+            id}
+          </p>
           <p>The reponse is JSON.</p>
           <p>Give it a try. Enter a Pokemon name.</p>
           <form id="pokemonForm">
